# spanish-pronunciation-assessment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: validation_manifest.example.json
data/output/: informe.json  report_pair.json  sample_report.json
json_schema/: evaluation_report.schema.json
scripts/: analyze_gop_calibration.py  export_expert_validation.py  generate_json_schema.py
src/: __init__.py  __main__.py  align.py  asr_validation.py  config.py  features.py  gop_speaker_adapted.py  models.py  pipeline.py  preprocess.py  reference_pair_phonology.py  reporting.py  scoring.py  spanish_phonology.py  text_processing.py  textgrid_io.py  transcribe.py
tests/: test_features.py  test_gop_speaker_adapted.py  test_gop_validation_tools.py  test_pipeline_artifacts.py  test_pipeline_confidence.py  test_preprocess.py  test_reference_pair_phonology.py  test_reporting_schema.py  test_scoring.py  test_text_processing.py  test_textgrid_io.py
tests/fixtures/: minimal_word.TextGrid  sample_expected_text.txt
